--- a/listings-product/gift.html
+++ b/listings-product/gift.html
@@ -293,8 +293,8 @@
                                       </div>
                                     </div>
                                     <div class="e1t1qgwj dir dir-ltr">
-                                      <div class="_7h9abkc">
-                                        <div role="group" class="_jfyyva">
+                                      <div class="alert-animation">
+                                        <div role="group" class="alert-danger">
                                           <div class="inbox-container__message-img-wrapper">
                                             <div class="_1etr4d9">
                                               <svg
