--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -25099,7 +25099,7 @@
                         Copy HTML
                       </button>
                       <div class="_ei7ywt hidden">
-                        <div class="_7h9abkc">
+                        <div class="alert-animation">
                           <div role="group" class="snackbar-box">
                             <div class="snackbar-icon"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
                                 aria-label="Success" role="img" focusable="false"
