--- a/payments/payment.html
+++ b/payments/payment.html
@@ -7796,7 +7796,7 @@
                       elementtiming="LCP-target"
                     >
                       <div class="modal__header-text">
-                        <div class="_ycllv4">Coupons</div>
+                        <div class="fs-normal">Coupons</div>
                       </div>
                     </h1>
                   </div>
@@ -7945,7 +7945,7 @@
                       elementtiming="LCP-target"
                     >
                       <div class="modal__header-text">
-                        <div class="_ycllv4">Country/region</div>
+                        <div class="fs-normal">Country/region</div>
                       </div>
                     </h1>
                   </div>
@@ -10764,7 +10764,7 @@
                   <div class="modal__heading">
                     <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                       <div class="modal__header-text">
-                        <div class="_ycllv4">House rules</div>
+                        <div class="fs-normal">House rules</div>
                       </div>
                     </h1>
                   </div>
