btn-primary w-full

--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -1291,7 +1291,7 @@
                                           data-testid="signup-login-submit-btn"
                                           data-id="confirm-number"
                                           type="submit"
-                                          class="_6hkhatt"
+                                          class="btn-primary w-full"
                                           data-veloute="submit-btn-cypress"
                                         >
                                           <span class="become-a-host__lets-go-wrapper"
@@ -1432,7 +1432,7 @@
                                         data-testid="signup-login-submit-btn"
                                         data-id="email-login"
                                         type="submit"
-                                        class="_6hkhatt"
+                                        class="btn-primary w-full"
                                         data-veloute="submit-btn-cypress"
                                       >
                                         <span class="become-a-host__lets-go-wrapper"
@@ -1457,7 +1457,7 @@
                                         data-testid="signup-login-submit-btn"
                                         data-id="email-signup"
                                         type="submit"
-                                        class="_6hkhatt"
+                                        class="btn-primary w-full"
                                         data-veloute="submit-btn-cypress"
                                       >
                                         <span class="become-a-host__lets-go-wrapper"
@@ -2300,7 +2300,7 @@
                                       </div>
                                       <div id="airlock-inline-container" aria-live="polite"></div>
                                       <div class="_wfo3ii"><button data-testid="signup-login-submit-btn" type="submit"
-                                          class="_6hkhatt" data-veloute="submit-btn-cypress"><span class="become-a-host__lets-go-wrapper"><span
+                                          class="btn-primary w-full" data-veloute="submit-btn-cypress"><span class="become-a-host__lets-go-wrapper"><span
                                               class="become-a-host__lets-go-btn"
                                               style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%); --mouse-x:58.1026; --mouse-y:30.8632;"></span></span><span
                                             class="become-a-host__lets-go-text">Log in </span></button></div><a
@@ -3242,7 +3242,7 @@
                                         <button
                                           data-testid="signup-login-submit-btn"
                                           type="submit"
-                                          class="_6hkhatt"
+                                          class="btn-primary w-full"
                                           data-veloute="submit-btn-cypress"
                                         >
                                           <span class="become-a-host__lets-go-wrapper"
@@ -4692,7 +4692,7 @@
                                         data-testid="signup-login-submit-btn"
                                         data-id="confirm-number"
                                         type="submit"
-                                        class="_6hkhatt"
+                                        class="btn-primary w-full"
                                         data-veloute="submit-btn-cypress"
                                       >
                                         <span class="become-a-host__lets-go-wrapper"
@@ -4827,7 +4827,7 @@
                                       data-testid="signup-login-submit-btn"
                                       data-id="email-login"
                                       type="submit"
-                                      class="_6hkhatt"
+                                      class="btn-primary w-full"
                                       data-veloute="submit-btn-cypress"
                                     >
                                       <span class="become-a-host__lets-go-wrapper"
@@ -4850,7 +4850,7 @@
                                       data-testid="signup-login-submit-btn"
                                       data-id="email-signup"
                                       type="submit"
-                                      class="_6hkhatt"
+                                      class="btn-primary w-full"
                                       data-veloute="submit-btn-cypress"
                                     >
                                       <span class="become-a-host__lets-go-wrapper"
@@ -5683,7 +5683,7 @@
                                     </div>
                                     <div id="airlock-inline-container" aria-live="polite"></div>
                                     <div class="_wfo3ii"><button data-testid="signup-login-submit-btn" type="submit"
-                                        class="_6hkhatt" data-veloute="submit-btn-cypress"><span class="become-a-host__lets-go-wrapper"><span
+                                        class="btn-primary w-full" data-veloute="submit-btn-cypress"><span class="become-a-host__lets-go-wrapper"><span
                                             class="become-a-host__lets-go-btn"
                                             style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%); --mouse-x:58.1026; --mouse-y:30.8632;"></span></span><span
                                           class="become-a-host__lets-go-text">Log in </span></button></div><a
@@ -6614,7 +6614,7 @@
                                       <button
                                         data-testid="signup-login-submit-btn"
                                         type="submit"
-                                        class="_6hkhatt"
+                                        class="btn-primary w-full"
                                         data-veloute="submit-btn-cypress"
                                       >
                                         <span class="become-a-host__lets-go-wrapper"
