--- a/account/welcome_back.html
+++ b/account/welcome_back.html
@@ -358,7 +358,7 @@
                                     </div>
                                     <div id="airlock-inline-container" aria-live="polite"></div>
                                     <div class="_wfo3ii">
-                                      <button data-testid="signup-login-submit-btn" type="submit" class="_6hkhatt"
+                                      <button data-testid="signup-login-submit-btn" type="submit" class="btn-primary w-full"
                                         data-veloute="submit-btn-cypress">
                                         <span class="become-a-host__lets-go-wrapper"><span
                                             class="become-a-host__lets-go-btn" style="
