--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -182,7 +182,7 @@
                 <div class="hidden-xl hidden-xl">
                   <div class="l148h9rn dir dir-ltr">
                     <a data-no-client-routing="true" href="/login?redirect_url=/help/article/252/searching-for-stays"
-                      class="_6hkhatt"><span class="become-a-host__lets-go-wrapper"><span class="_kaq6tx" style="
+                      class="btn-primary w-full"><span class="become-a-host__lets-go-wrapper"><span class="_kaq6tx" style="
                               background-position: calc(
                                   (100 - var(--mouse-x, 0)) * 1%
                                 )
