--- a/listings-product/gift.html
+++ b/listings-product/gift.html
@@ -270,7 +270,7 @@
                                           <button
                                             data-testid="claim-submit-button"
                                             type="button"
-                                            class="_6hkhatt"
+                                            class="btn-primary w-full"
                                           >
                                             <span class="become-a-host__lets-go-wrapper"
                                               ><span
