--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -7050,7 +7050,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   your number. Standard message and data rates apply. <a target="_blank"
                                                                     href="/terms/privacy_policy?source=signup" class="text-link">Privacy Policy</a></span></div>
                                                               <div id="airlock-inline-container" aria-live="polite"></div>
-                                                              <div class="login-pane__btn-wrapper"><button data-testid="signup-login-submit-btn" type="submit" class="_6hkhatt"
+                                                              <div class="login-pane__btn-wrapper"><button data-testid="signup-login-submit-btn" type="submit" class="btn-primary w-full"
                                                                   data-veloute="submit-btn-cypress"><span class="become-a-host__lets-go-wrapper"><span class="_kaq6tx"
                                                                       style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%);"></span></span><span
                                                                     class="_tcp689">Continue </span></button></div>
