--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1684,7 +1684,7 @@
                                                           <button
                                                             data-testid="signup-login-submit-btn"
                                                             type="submit"
-                                                            class="_6hkhatt"
+                                                            class="btn-primary w-full"
                                                             data-veloute="submit-btn-cypress"
                                                           >
                                                             <span
@@ -2630,7 +2630,7 @@
                                           <a target="_blank" href="/terms/privacy_policy?source=signup" class="text-link">Privacy Policy</a></span>
                                       </div> 
                                       <div class="login-pane__btn-wrapper">
-                                        <button data-testid="signup-login-submit-btn" data-id="confirm-number" type="submit" class="_6hkhatt" data-veloute="submit-btn-cypress">
+                                        <button data-testid="signup-login-submit-btn" data-id="confirm-number" type="submit" class="btn-primary w-full" data-veloute="submit-btn-cypress">
                                           <span class="become-a-host__lets-go-wrapper"><span class="become-a-host__lets-go-btn" style="
                                                 background-position: calc(
                                                     (100 - var(--mouse-x, 0)) * 1%
@@ -5204,7 +5204,7 @@
                                                             <button
                                                               data-testid="signup-login-submit-btn"
                                                               type="submit"
-                                                              class="_6hkhatt"
+                                                              class="btn-primary w-full"
                                                               data-veloute="submit-btn-cypress"
                                                             >
                                                               <span
@@ -6138,7 +6138,7 @@
                                           <a target="_blank" href="/terms/privacy_policy?source=signup" class="text-link">Privacy Policy</a></span>
                                       </div> 
                                       <div class="login-pane__btn-wrapper">
-                                        <button data-testid="signup-login-submit-btn" data-id="confirm-number" type="submit" class="_6hkhatt" data-veloute="submit-btn-cypress">
+                                        <button data-testid="signup-login-submit-btn" data-id="confirm-number" type="submit" class="btn-primary w-full" data-veloute="submit-btn-cypress">
                                           <span class="become-a-host__lets-go-wrapper"><span class="become-a-host__lets-go-btn" style="
                                                 background-position: calc(
                                                     (100 - var(--mouse-x, 0)) * 1%
