--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -8567,7 +8567,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                   data-testid="pdp-show-all-reviews-button"
                                                   aria-label="Show all 134 reviews, Opens modal dialog"
                                                   type="button"
-                                                  class="b65jmrv v7aged4 dir dir-ltr"
+                                                  class="btn-outline dir dir-ltr"
                                                 >
                                                   Show all 134 reviews
                                                 </button>
