--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -3569,7 +3569,7 @@
                                               </div>
                                             </div>
                                             <div class="b6xigss dir dir-ltr"><button type="button"
-                                                class="b65jmrv v7aged4 dir dir-ltr">Show all 26 amenities</button></div>
+                                                class="btn-outline dir dir-ltr">Show all 26 amenities</button></div>
                                           </section>
                                         </div>
                                       </div>
@@ -13211,7 +13211,7 @@
                                               </div>
                                             </div>
                                             <div class="b6xigss dir dir-ltr"><button type="button"
-                                                class="b65jmrv v7aged4 dir dir-ltr">Show all 26 amenities</button></div>
+                                                class="btn-outline dir dir-ltr">Show all 26 amenities</button></div>
                                           </section>
                                         </div>
                                       </div>
@@ -14207,7 +14207,7 @@
                                             <div class="stu4mdj dir dir-ltr">
                                               <button data-testid="pdp-show-all-reviews-button"
                                                 aria-label="Show all 134 reviews, Opens modal dialog" type="button"
-                                                class="b65jmrv v7aged4 dir dir-ltr">
+                                                class="btn-outline dir dir-ltr">
                                                 Show all 134 reviews
                                               </button>
                                             </div>
