--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -4274,7 +4274,7 @@
                                                   data-testid="pdp-show-all-reviews-button"
                                                   aria-label="Show all 134 reviews, Opens modal dialog"
                                                   type="button"
-                                                  class="b65jmrv v7aged4 dir dir-ltr"
+                                                  class="btn-outline dir dir-ltr"
                                                 >
                                                   Show all 134 reviews
                                                 </button>
