--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -12999,7 +12999,7 @@
                                             <div class="stu4mdj dir dir-ltr">
                                               <button data-testid="pdp-show-all-reviews-button"
                                                 aria-label="Show all 134 reviews, Opens modal dialog" type="button"
-                                                class="b65jmrv v7aged4 dir dir-ltr">
+                                                class="btn-outline dir dir-ltr">
                                                 Show all 134 reviews
                                               </button>
                                             </div>
