--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -6648,7 +6648,7 @@
                                                   </div>
                                                 </div>
                                                 <div class="b6xigss dir dir-ltr">
-                                                  <button type="button" class="b65jmrv v7aged4 dir dir-ltr"
+                                                  <button type="button" class="btn-outline dir dir-ltr"
                                                     data-modal="#amenities-modal">
                                                     Show all 30 amenities
                                                   </button>
@@ -15055,7 +15055,7 @@
                                               <button data-modal="#reviews-modal"
                                                 data-testid="pdp-show-all-reviews-button"
                                                 aria-label="Show all 134 reviews, Opens modal dialog" type="button"
-                                                class="b65jmrv v7aged4 dir dir-ltr">
+                                                class="btn-outline dir dir-ltr">
                                                 Show all 134 reviews
                                               </button>
                                             </div>
