--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -7328,7 +7328,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                 class="tab__content-visibility"
                                               >
                                                 <div
-                                                  class="r1f90fvr dir dir-ltr"
+                                                  class="mb-6 dir dir-ltr"
                                                 >
                                                   <div
                                                     class="reviews-rate dir dir-ltr"
