--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -12193,7 +12193,7 @@
                                               </span>
                                             </div>
                                             <div class="tab__content-visibility">
-                                              <div class="r1f90fvr dir dir-ltr">
+                                              <div class="mb-6 dir dir-ltr">
                                                 <div class="reviews-rate dir dir-ltr">
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
