--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -4066,7 +4066,7 @@
                                                 class="tab__content-visibility"
                                               >
                                                 <div
-                                                  class="r1f90fvr dir dir-ltr"
+                                                  class="mb-6 dir dir-ltr"
                                                 >
                                                   <div
                                                     class="reviews-rate dir dir-ltr"
