--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -13404,7 +13404,7 @@
                                               <div class="mb-6 dir dir-ltr">
                                                 <div class="reviews-rate dir dir-ltr">
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Cleanliness
@@ -13421,7 +13421,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Accuracy
@@ -13438,7 +13438,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Communication
@@ -13455,7 +13455,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Location
@@ -13472,7 +13472,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Check-in
@@ -13489,7 +13489,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Value
