--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -14251,7 +14251,7 @@
                                               <div class="mb-6 dir dir-ltr">
                                                 <div class="reviews-rate dir dir-ltr">
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Cleanliness
@@ -14268,7 +14268,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Accuracy
@@ -14285,7 +14285,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Communication
@@ -14302,7 +14302,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Location
@@ -14319,7 +14319,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Check-in
@@ -14336,7 +14336,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Value
