--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -4073,7 +4073,7 @@
                                                   >
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
@@ -4103,7 +4103,7 @@
                                                     </div>
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
@@ -4133,7 +4133,7 @@
                                                     </div>
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
@@ -4163,7 +4163,7 @@
                                                     </div>
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
@@ -4193,7 +4193,7 @@
                                                     </div>
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
@@ -4223,7 +4223,7 @@
                                                     </div>
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
