--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -7335,7 +7335,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                   >
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
@@ -7365,7 +7365,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                     </div>
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
@@ -7395,7 +7395,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                     </div>
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
@@ -7425,7 +7425,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                     </div>
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
@@ -7455,7 +7455,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                     </div>
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
@@ -7485,7 +7485,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                     </div>
                                                     <div class="reviews-rate__wrapper">
                                                       <div
-                                                        class="rjiv01r dir dir-ltr"
+                                                        class="mb-4 dir dir-ltr"
                                                       >
                                                         <div class="reviews-rate__body">
                                                           <div class="reviews-rate__title">
