--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -12196,7 +12196,7 @@
                                               <div class="mb-6 dir dir-ltr">
                                                 <div class="reviews-rate dir dir-ltr">
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Cleanliness
@@ -12213,7 +12213,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Accuracy
@@ -12230,7 +12230,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Communication
@@ -12247,7 +12247,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Location
@@ -12264,7 +12264,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Check-in
@@ -12281,7 +12281,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
-                                                    <div class="rjiv01r dir dir-ltr">
+                                                    <div class="mb-4 dir dir-ltr">
                                                       <div class="reviews-rate__body">
                                                         <div class="reviews-rate__title">
                                                           Value
